# lawnlord

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/projects/-home-jwogrady-workspace-lawnlord/memory/: ai-page-layer.md
.github/workflows/: ci.yml
.review-notes/: 00-project-map.md  01-documentation.md  02-architecture.md  03-code-quality.md  04-testing-reliability.md  05-security-config.md  06-product-readiness.md  07-provenance-integrity.md  08-final-report.md
docs/: CONTRIBUTING.md  ROADMAP.md  architecture.md  context.md  contributing.md  motivation.md  prior-art-rake-old.md  problem-transcription-corpus.md  problem-transcription-efficiency.md  schema.md  standard-schema.md  ux.md
docs/adr/: 0000-template.md  0001-local-first-transcription.md  0002-local-inference-runtime.md  0003-concurrency-and-resume.md  0004-pdf-text-layer-prepass.md  0005-page-text-keyed-by-variation.md  0006-exhaustive-transcription.md  0007-multi-level-exports-and-downloads.md  0008-divergence-and-agreement-in-export-layer.md  0009-spatial-anchoring-for-on-image-highlight.md
docs/brand/: brand-guide.md  fonts.css  tailwind.preset.js  tokens.css
docs/performance/: cosmic-backend-comparison.md  native-300dpi-vulkan-benchmark.md
docs/plans/: v0.1.0-release.md  v0.2.0-milestone-1-case-workspace.md  v0.3.0-complete-truth-and-full-text.md
docs/prompts/: prompt.md  prompt2.md  prompt3.md
docs/reference/: cosmic-amd-runbook.md  development-machine.md  multi-machine-setup.md
profiles/: common.env  cosmic-amd.env  cosmos-nvidia.env  cpu-fallback.env
scripts/: build_brand_kit.py  llamacpp_server.sh  ollama-override.conf  ollama_tuning.md  transcribe_local.sh
scripts/cosmic/: README.md  bench.py  bench_np3_native.out  bench_np3_warm.out  bench_np4_warm.out  dump.py  gpubusy.ps1  gpumon.ps1  prompt.txt  serve_vision.cmd  sweep.ps1  sweep_results.txt  transcribe_vision.sh  vram_log.ps1  vram_peak.ps1
scripts/cosmos/: README.md  capture-cosmos.sh
src/lawnlord/: __init__.py  __main__.py  ai.py  analysis_schema.py  archive.py  assemble.py  boundaries.py  bundle.py  canonical.py  cli.py  combine.py  compare.py  confidence.py  console.py  corpus.py  curation.py  dates.py  db.py  explode.py  export.py  hashing.py  index.py  ingest.py  intake.py  logging_setup.py  models.py  ocr.py  pack.py  paths.py  preservation.py  providers.py  query.py  reader.py  regions.py  reporting.py  transcribe.py  unify.py  workspace.py
tests/: conftest.py  test_ai.py  test_assemble.py  test_assemble_from_index.py  test_baseline.py  test_bundle.py  test_canonical.py  test_cli.py  test_combine.py  test_compare.py  test_confidence.py  test_dates.py  test_db.py  test_end_to_end.py  test_explode.py  test_export.py  test_folder_source.py  test_helpers.py  test_index.py  test_ingest.py  test_intake.py  test_intake_root.py  test_metrics.py  test_ocr.py  test_pack.py  test_preservation.py  test_providers.py  test_query.py  test_reader.py  test_real_intake_roundtrip.py  test_regions.py  test_schema_levels.py  test_sections.py  test_timeline.py  test_transcribe.py  test_unify.py  test_workspace.py
web/: .gitignore  CLAUDE.md  README.md  app.ts  biome.json  download.ts  index.html  index.ts  package.json  paths.test.ts  paths.ts  styles.css  tsconfig.json
web/sample/: compare.json  manifest.json
