[project]
name = "lawnlord"
version = "0.3.0"
description = "Local-first toolkit for legal court records: explode each case document into citation-preserving sections and pages with full provenance — the deterministic substrate for a case-understanding engine."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
keywords = [
    "legal",
    "litigation",
    "court-records",
    "pdf",
    "provenance",
    "case-management",
    "pro-se",
    "odyssey",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: Other/Proprietary License",
    "Environment :: Console",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
]
dependencies = [
    "duckdb>=1.1",
    "pymupdf>=1.27.2.3",
    "python-slugify>=8.0.4",
    "rich>=15.0.0",
]

[project.urls]
Repository = "https://github.com/jwogrady/lawnlord"
Changelog = "https://github.com/jwogrady/lawnlord/blob/master/CHANGELOG.md"
Roadmap = "https://github.com/jwogrady/lawnlord/blob/master/docs/ROADMAP.md"

[project.scripts]
lawnlord = "lawnlord.cli:main"

[project.optional-dependencies]
ocr = [
    "numpy>=2.4.6",
    "rapidocr-onnxruntime>=1.4.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lawnlord"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
