[project]
name = "lawnlord"
version = "0.3.0"
description = "Local-first legal case-understanding engine: mirror a court case from its deterministic export (the rake zip) into a verifiable, source-traceable index — the substrate for reading and fighting the case."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
keywords = [
    "legal",
    "litigation",
    "court-records",
    "pdf",
    "provenance",
    "case-management",
    "pro-se",
    "odyssey",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: Other/Proprietary License",
    "Environment :: Console",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
]
dependencies = [
    "anthropic>=0.69",
    "duckdb>=1.1",
    "jsonschema>=4.0",
    "pillow>=10.0",
    "python-dotenv>=1.0",
    "pypdfium2>=4.30",
    "python-slugify>=8.0.4",
    "rich>=15.0.0",
]

[project.urls]
Repository = "https://github.com/jwogrady/lawnlord"
Changelog = "https://github.com/jwogrady/lawnlord/blob/master/CHANGELOG.md"
Roadmap = "https://github.com/jwogrady/lawnlord/blob/master/ROADMAP.md"

[project.scripts]
lawnlord = "lawnlord.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pypdf>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lawnlord"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
