[project]
name = "lawnlord"
version = "0.4.0"
description = "Local-first legal case-understanding engine: mirror a court case from its deterministic export (the rake zip) into a verifiable, source-traceable index — the substrate for reading and fighting the case."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
keywords = [
    "legal",
    "litigation",
    "court-records",
    "pdf",
    "provenance",
    "case-management",
    "pro-se",
    "odyssey",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: Other/Proprietary License",
    "Environment :: Console",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
]
dependencies = [
    "anthropic>=0.69",
    "duckdb>=1.1",
    "jsonschema>=4.0",
    "pillow>=10.0",
    "python-dotenv>=1.0",
    "pypdfium2>=4.30",
    "python-slugify>=8.0.4",
    "rich>=15.0.0",
]

[project.urls]
Repository = "https://github.com/jwogrady/lawnlord"
Changelog = "https://github.com/jwogrady/lawnlord/blob/master/CHANGELOG.md"
Roadmap = "https://github.com/jwogrady/lawnlord/blob/master/ROADMAP.md"

[project.scripts]
lawnlord = "lawnlord.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pypdf>=4.0",
    "mypy>=2.1.0",
    "types-jsonschema>=4.26.0.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lawnlord"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Slow/optional acceptance tests are excluded from the default fast run; opt in
# with `pytest -m slow` (they round-trip the real 17 MB court-export fixture).
addopts = "-m 'not slow'"
markers = [
    "slow: real-fixture acceptance tests excluded from the default fast run (run with `pytest -m slow`)",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# Static type checking. Run with: `uv run mypy src/lawnlord`
#
# Strictness: this is a LENIENT BASELINE — mypy's defaults, which check
# annotated code but do not force annotations on every function. It passes at
# zero errors today. The intended ratchet direction is UP: tighten toward
# `strict = true` (or incrementally enable disallow_untyped_defs,
# warn_return_any, etc.) as modules gain annotations. Do not loosen below this.
[tool.mypy]
files = ["src/lawnlord"]
python_version = "3.13"
# Stable, low-noise floor on top of the defaults.
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

# Untyped third-party libraries without stubs or a py.typed marker. Scoped
# per-module rather than globally so a real typo'd import elsewhere still errors.
# (jsonschema is handled by the installed `types-jsonschema` stub package.)
[[tool.mypy.overrides]]
module = ["pypdfium2"]
ignore_missing_imports = true
